@@ -26,3 +26,6 @@ install-sh
 missing
 stamp-h1
 test-driver
+
+# manual pages
+docs/*.[1-9]
