@@ -1,0 +1,1 @@
+debian/tmp/usr/share/man/man5/snap-confine.5
