@@ -1,0 +1,1 @@
+debian/tmp/usr/share/man/man1/ubuntu-core-launcher.1
