@@ -9,6 +9,9 @@ ubuntu-core-launcher (1.0.33) UNRELEASED; urgency=medium
   [ Jamie Strandboge ]
   * implement seccomp argument filtering (LP: #1446748)
 
+  [ Zygmunt Krynicki ]
+  * Build-depend on python3-docutils for rst2man
+
  -- Zygmunt Krynicki <zygmunt.krynicki@canonical.com>  Sun, 19 Jun 2016 00:46:10 +0200
 
 ubuntu-core-launcher (1.0.30) yakkety; urgency=medium
